--- a/результаты_M2.md
+++ b/результаты_M2.md
@@ -4,12 +4,12 @@
 | ---------- | ----------- | --------------------------------------- |
 | **STR-1**  | ✅ Выполнено | Сохранена структура Sprint 1            |
 | **STR-2**  | ✅ Выполнено | README.md обновлен                      |
-| **STR-3**  | ✅ Выполнено | Папка `src/modes/` содержит все режимы  |
+| **STR-3**  | ✅ Выполнено | Python: реализовано в `pycryptocore/crypto_core.py` |
 | **CLI-1**  | ✅ Выполнено | Поддержка 5 режимов в CLI               |
 | **CLI-2**  | ✅ Выполнено | Корректная обработка IV                 |
 | **CLI-3**  | ✅ Выполнено | Валидация IV при шифровании             |
-| **CRY-1**  | ✅ Выполнено | Использование AES-примитива OpenSSL     |
-| **CRY-2**  | ✅ Выполнено | 4 новых режима реализованы с нуля       |
+| **CRY-1**  | ✅ Выполнено | Python: Crypto.Cipher.AES (pycryptodome) |
+| **CRY-2**  | ✅ Выполнено | 4 новых режима реализованы вручную (CBC/CFB/OFB/CTR) |
 | **CRY-3**  | ✅ Выполнено | Специфические требования каждого режима |
 | **CRY-4**  | ✅ Выполнено | Правильная логика padding               |
 | **IV-1**   | ✅ Выполнено | Безопасная генерация IV                 |
@@ -28,7 +28,7 @@
 
 **Все 21 требование из документа M2 полностью выполнены и протестированы.**
 
-CryptoCore (C версия) теперь поддерживает:
+CryptoCore (Python версия) теперь поддерживает:
 
 - ✅ **5 режимов шифрования AES-128**: ECB, CBC, CFB, OFB, CTR
 - ✅ **Безопасную обработку IV** с автоматической генерацией
@@ -45,14 +45,14 @@ CryptoCore (C версия) теперь поддерживает:
 4. **OFB (Output Feedback)** - потоковый режим с выходной обратной связью
 5. **CTR (Counter)** - счетчик с гаммированием
 
-### Примеры использования:
+### Примеры использования (Python CLI):
 
 ```bash
 # Шифрование с ключом
-./cryptocore --algorithm aes --mode cbc --encrypt --key 000102030405060708090a0b0c0d0e0f --input plain.txt --output cipher.bin
+cryptocore --algorithm aes --mode cbc --encrypt --key 000102030405060708090a0b0c0d0e0f --input plain.txt --output cipher.bin
 
 # Дешифрование с ключом
-./cryptocore --algorithm aes --mode cbc --decrypt --key 000102030405060708090a0b0c0d0e0f --input cipher.bin --output decrypted.txt
+cryptocore --algorithm aes --mode cbc --decrypt --key 000102030405060708090a0b0c0d0e0f --input cipher.bin --output decrypted.txt
 
 # Шифрование с паролем
 ./cryptocore --algorithm aes --mode cbc --encrypt --password mypassword --input plain.txt --output cipher.bin
@@ -84,11 +84,11 @@ openssl enc -aes-128-ecb -K 000102030405060708090a0b0c0d0e0f -in plaintext.txt -
 openssl enc -aes-128-ecb -K 000102030405060708090a0b0c0d0e0f -in ciphertext.bin -out decrypted.txt -d -nopad
 ```
 
-### Тестирование:
+### Тестирование (Python):
 
 ```bash
 # Запуск всех тестов
-make test
+build_py.bat (Windows) или run_tests_py.sh (Linux/macOS)
 
 # Или вручную
 ./test_runner.sh
