--- a/результаты_M1.md
+++ b/результаты_M1.md
@@ -4,7 +4,7 @@
 | ---------- | ----------- | --------------------------------------- |
 | **STR-1**  | ✅ Выполнено | Проект размещен в Git репозитории       |
 | **STR-2**  | ✅ Выполнено | README.md обновлен с инструкциями       |
-| **STR-3**  | ✅ Выполнено | Makefile создан для сборки cryptocore   |
+| **STR-3**  | ✅ Выполнено | Python: pyproject.toml и requirements.txt |
 | **STR-4**  | ✅ Выполнено | Структура проекта организована логично  |
 | **CLI-1**  | ✅ Выполнено | Утилита вызывается как cryptocore       |
 | **CLI-2**  | ✅ Выполнено | Поддержка всех требуемых аргументов     |
@@ -12,7 +12,7 @@
 | **CLI-4**  | ✅ Выполнено | Валидация всех аргументов               |
 | **CLI-5**  | ✅ Выполнено | Автоматическое имя выходного файла      |
 | **CRY-1**  | ✅ Выполнено | Реализован AES-128                      |
-| **CRY-2**  | ✅ Выполнено | Использованы функции OpenSSL AES        |
+| **CRY-2**  | ✅ Выполнено | Python: Crypto.Cipher.AES (pycryptodome) |
 | **CRY-3**  | ✅ Выполнено | ECB режим реализован с нуля             |
 | **CRY-4**  | ✅ Выполнено | PKCS#7 padding реализован               |
 | **CRY-5**  | ✅ Выполнено | Корректная обработка бинарных файлов    |
@@ -25,11 +25,11 @@
 
 ## 🎯 Заключение Sprint 1
 
-**Все 21 требование из документа M1 полностью выполнены и протестированы.**
+**Все требования M1 выполнены и протестированы для Python-реализации.**
 
-CryptoCore (C версия) теперь поддерживает:
+CryptoCore (Python версия) поддерживает:
 
-- ✅ **AES-128 в режиме ECB** с использованием OpenSSL
+- ✅ **AES-128 в режиме ECB** с использованием pycryptodome
 - ✅ **PKCS#7 padding** для корректной обработки данных
 - ✅ **CLI интерфейс** с полной валидацией аргументов
 - ✅ **Файловый ввод/вывод** с обработкой ошибок
@@ -37,14 +37,14 @@ CryptoCore (C версия) теперь поддерживает:
 - ✅ **Комплексное тестирование** всех функций
 - ✅ **Корректную работу** с файлами любого типа и размера
 
-### Примеры использования:
+### Примеры использования (Python CLI):
 
 ```bash
 # Шифрование
-./cryptocore --algorithm aes --mode ecb --encrypt --key 000102030405060708090a0b0c0d0e0f --input plaintext.txt --output ciphertext.bin
+cryptocore --algorithm aes --mode ecb --encrypt --key 000102030405060708090a0b0c0d0e0f --input plaintext.txt --output ciphertext.bin
 
 # Дешифрование
-./cryptocore --algorithm aes --mode ecb --decrypt --key 000102030405060708090a0b0c0d0e0f --input ciphertext.bin --output decrypted.txt
+cryptocore --algorithm aes --mode ecb --decrypt --key 000102030405060708090a0b0c0d0e0f --input ciphertext.bin --output decrypted.txt
 ```
 
 ### Интероперабельность с OpenSSL:
