--- a/результаты_M2.md
+++ b/результаты_M2.md
@@ -49,16 +49,16 @@ CryptoCore (Python версия) теперь поддерживает:
 
 ```bash
 # Шифрование с ключом
-cryptocore --algorithm aes --mode cbc --encrypt --key 000102030405060708090a0b0c0d0e0f --input plain.txt --output cipher.bin
+python -m pycryptocore.cli --algorithm aes --mode cbc --encrypt --key 000102030405060708090a0b0c0d0e0f --input plain.txt --output cipher.bin
 
 # Дешифрование с ключом
-cryptocore --algorithm aes --mode cbc --decrypt --key 000102030405060708090a0b0c0d0e0f --input cipher.bin --output decrypted.txt
+python -m pycryptocore.cli --algorithm aes --mode cbc --decrypt --key 000102030405060708090a0b0c0d0e0f --input cipher.bin --output decrypted.txt
 
 # Шифрование с паролем
-./cryptocore --algorithm aes --mode cbc --encrypt --password mypassword --input plain.txt --output cipher.bin
+python -m pycryptocore.cli --algorithm aes --mode cbc --encrypt --password mypassword --input plain.txt --output cipher.bin
 
 # Дешифрование с паролем
-./cryptocore --algorithm aes --mode cbc --decrypt --password mypassword --input cipher.bin --output decrypted.txt
+python -m pycryptocore.cli --algorithm aes --mode cbc --decrypt --password mypassword --input cipher.bin --output decrypted.txt
 ```
 
 ### Формат файлов:
@@ -76,22 +76,30 @@ cryptocore --algorithm aes --mode cbc --decrypt --key 000102030405060708090a0b0c
 
 ```bash
 # Шифрование с OpenSSL, дешифрование с CryptoCore (ECB)
-openssl enc -aes-128-ecb -K 000102030405060708090a0b0c0d0e0f -in plaintext.txt -out ciphertext.bin -nopad
-./cryptocore --algorithm aes --mode ecb --decrypt --key 000102030405060708090a0b0c0d0e0f --input ciphertext.bin --output decrypted.txt
+openssl enc -aes-128-ecb -K 000102030405060708090a0b0c0d0e0f -in plaintext.txt -out ciphertext.bin
+python -m pycryptocore.cli --algorithm aes --mode ecb --decrypt --key 000102030405060708090a0b0c0d0e0f --input ciphertext.bin --output decrypted.txt
 
 # Шифрование с CryptoCore, дешифрование с OpenSSL (ECB)
-./cryptocore --algorithm aes --mode ecb --encrypt --key 000102030405060708090a0b0c0d0e0f --input plaintext.txt --output ciphertext.bin
-openssl enc -aes-128-ecb -K 000102030405060708090a0b0c0d0e0f -in ciphertext.bin -out decrypted.txt -d -nopad
+python -m pycryptocore.cli --algorithm aes --mode ecb --encrypt --key 000102030405060708090a0b0c0d0e0f --input plaintext.txt --output ciphertext.bin
+openssl enc -aes-128-ecb -d -K 000102030405060708090a0b0c0d0e0f -in ciphertext.bin -out decrypted.txt
 ```
+
+**Примечание:** Для интероперабельности с OpenSSL не используется флаг `-nopad`, так как CryptoCore использует PKCS#7 padding.
 
 ### Тестирование (Python):
 
 ```bash
 # Запуск всех тестов
-build_py.bat (Windows) или run_tests_py.sh (Linux/macOS)
+python run_tests.py
 
-# Или вручную
-./test_runner.sh
+# Или
+bash run_tests_py.sh
+
+# Установка зависимостей (Windows)
+build_py.bat
+
+# Установка зависимостей (Linux/macOS)
+pip install -r requirements.txt
 ```
 
 Проект готов к использованию и соответствует всем техническим требованиям Sprint 2.
