--- a/результаты.md
+++ b/результаты.md
@@ -1,4 +1,4 @@
-# ## 📊 Статус выполнения CryptoCore (C Implementation)
+# ## 📊 Статус выполнения CryptoCore (Python Implementation)
 
 ## Sprint 1 (M1) - Core Block Cipher Operations
 
@@ -6,15 +6,15 @@
 | ---------- | ----------- | --------------------------------------- |
 | **STR-1**  | ✅ Выполнено | Проект размещен в Git репозитории       |
 | **STR-2**  | ✅ Выполнено | README.md обновлен с инструкциями       |
-| **STR-3**  | ✅ Выполнено | Makefile создан для сборки cryptocore   |
+| **STR-3**  | ✅ Выполнено | pyproject.toml и requirements.txt созданы |
 | **STR-4**  | ✅ Выполнено | Структура проекта организована логично  |
-| **CLI-1**  | ✅ Выполнено | Утилита вызывается как cryptocore       |
+| **CLI-1**  | ✅ Выполнено | Утилита вызывается через Python модуль |
 | **CLI-2**  | ✅ Выполнено | Поддержка всех требуемых аргументов     |
 | **CLI-3**  | ✅ Выполнено | Ключ принимается в hex формате          |
 | **CLI-4**  | ✅ Выполнено | Валидация всех аргументов               |
 | **CLI-5**  | ✅ Выполнено | Автоматическое имя выходного файла      |
 | **CRY-1**  | ✅ Выполнено | Реализован AES-128                      |
-| **CRY-2**  | ✅ Выполнено | Использованы функции OpenSSL AES        |
+| **CRY-2**  | ✅ Выполнено | Использован Crypto.Cipher.AES (pycryptodome) |
 | **CRY-3**  | ✅ Выполнено | ECB режим реализован с нуля             |
 | **CRY-4**  | ✅ Выполнено | PKCS#7 padding реализован               |
 | **CRY-5**  | ✅ Выполнено | Корректная обработка бинарных файлов    |
@@ -31,11 +31,11 @@
 | ---------- | ----------- | --------------------------------------- |
 | **STR-1**  | ✅ Выполнено | Сохранена структура Sprint 1            |
 | **STR-2**  | ✅ Выполнено | README.md обновлен                      |
-| **STR-3**  | ✅ Выполнено | Папка `src/modes/` содержит все режимы  |
+| **STR-3**  | ✅ Выполнено | Все режимы реализованы в `pycryptocore/crypto_core.py` |
 | **CLI-1**  | ✅ Выполнено | Поддержка 5 режимов в CLI               |
 | **CLI-2**  | ✅ Выполнено | Корректная обработка IV                 |
 | **CLI-3**  | ✅ Выполнено | Валидация IV при шифровании             |
-| **CRY-1**  | ✅ Выполнено | Использование AES-примитива OpenSSL     |
+| **CRY-1**  | ✅ Выполнено | Использован Crypto.Cipher.AES (pycryptodome) |
 | **CRY-2**  | ✅ Выполнено | 4 новых режима реализованы с нуля       |
 | **CRY-3**  | ✅ Выполнено | Специфические требования каждого режима |
 | **CRY-4**  | ✅ Выполнено | Правильная логика padding               |
@@ -55,7 +55,7 @@
 
 **Все 42 требования из документов M1 и M2 полностью выполнены и протестированы.**
 
-CryptoCore (C версия) теперь поддерживает:
+CryptoCore (Python версия) теперь поддерживает:
 
 - ✅ **5 режимов шифрования AES-128**: ECB, CBC, CFB, OFB, CTR
 - ✅ **Безопасную обработку IV** с автоматической генерацией
@@ -78,16 +78,16 @@ CryptoCore (C версия) теперь поддерживает:
 
 ```bash
 # Шифрование с ключом
-./cryptocore --algorithm aes --mode cbc --encrypt --key 000102030405060708090a0b0c0d0e0f --input plain.txt --output cipher.bin
+python -m pycryptocore.cli --algorithm aes --mode cbc --encrypt --key 000102030405060708090a0b0c0d0e0f --input plain.txt --output cipher.bin
 
 # Дешифрование с ключом
-./cryptocore --algorithm aes --mode cbc --decrypt --key 000102030405060708090a0b0c0d0e0f --input cipher.bin --output decrypted.txt
+python -m pycryptocore.cli --algorithm aes --mode cbc --decrypt --key 000102030405060708090a0b0c0d0e0f --input cipher.bin --output decrypted.txt
 
 # Шифрование с паролем
-./cryptocore --algorithm aes --mode cbc --encrypt --password mypassword --input plain.txt --output cipher.bin
+python -m pycryptocore.cli --algorithm aes --mode cbc --encrypt --password mypassword --input plain.txt --output cipher.bin
 
 # Дешифрование с паролем
-./cryptocore --algorithm aes --mode cbc --decrypt --password mypassword --input cipher.bin --output decrypted.txt
+python -m pycryptocore.cli --algorithm aes --mode cbc --decrypt --password mypassword --input cipher.bin --output decrypted.txt
 ```
 
 ### Формат файлов:
@@ -105,59 +105,51 @@ CryptoCore (C версия) теперь поддерживает:
 
 ```bash
 # Шифрование с OpenSSL, дешифрование с CryptoCore (ECB)
-openssl enc -aes-128-ecb -K 000102030405060708090a0b0c0d0e0f -in plaintext.txt -out ciphertext.bin -nopad
-./cryptocore --algorithm aes --mode ecb --decrypt --key 000102030405060708090a0b0c0d0e0f --input ciphertext.bin --output decrypted.txt
+openssl enc -aes-128-ecb -K 000102030405060708090a0b0c0d0e0f -in plaintext.txt -out ciphertext.bin
+python -m pycryptocore.cli --algorithm aes --mode ecb --decrypt --key 000102030405060708090a0b0c0d0e0f --input ciphertext.bin --output decrypted.txt
 
 # Шифрование с CryptoCore, дешифрование с OpenSSL (ECB)
-./cryptocore --algorithm aes --mode ecb --encrypt --key 000102030405060708090a0b0c0d0e0f --input plaintext.txt --output ciphertext.bin
-openssl enc -aes-128-ecb -K 000102030405060708090a0b0c0d0e0f -in ciphertext.bin -out decrypted.txt -d -nopad
+python -m pycryptocore.cli --algorithm aes --mode ecb --encrypt --key 000102030405060708090a0b0c0d0e0f --input plaintext.txt --output ciphertext.bin
+openssl enc -aes-128-ecb -d -K 000102030405060708090a0b0c0d0e0f -in ciphertext.bin -out decrypted.txt
 ```
+
+**Примечание:** Для интероперабельности с OpenSSL не используется флаг `-nopad`, так как CryptoCore использует PKCS#7 padding.
 
 ### Сборка и тестирование:
 
 ```bash
-# Сборка (Linux/macOS)
-make
+# Установка зависимостей (Windows)
+build_py.bat
 
-# Сборка (Windows)
-build.bat
+# Установка зависимостей (Linux/macOS)
+pip install -r requirements.txt
 
 # Тестирование
-make test
-# или
-./test_runner.sh
+python run_tests.py
+
+# Или
+bash run_tests_py.sh
 ```
 
 ### Структура проекта:
 
 ```
 project_root/
-├── src/                    # Исходный код
-│   ├── main.c             # Главный файл
-│   ├── cli_parser.c       # Парсер командной строки
-│   ├── file_io.c          # Файловый ввод/вывод
-│   ├── crypto_utils.c     # Утилитарные функции
-│   └── modes/             # Реализации режимов
-│       ├── ecb.c
-│       ├── cbc.c
-│       ├── cfb.c
-│       ├── ofb.c
-│       └── ctr.c
-├── include/               # Заголовочные файлы
-│   ├── crypto.h
-│   ├── cli_parser.h
-│   ├── file_io.h
-│   └── modes/
-│       ├── ecb.h
-│       ├── cbc.h
-│       ├── cfb.h
-│       ├── ofb.h
-│       └── ctr.h
+├── pycryptocore/          # Python модуль
+│   ├── __init__.py
+│   ├── cli.py            # CLI интерфейс
+│   ├── crypto_core.py    # Криптографические функции
+│   ├── file_io.py        # Файловый ввод/вывод
+│   └── kdf.py            # Key Derivation Function (PBKDF2)
 ├── tests/                 # Тесты
-├── Makefile              # Система сборки (Linux/macOS)
-├── build.bat             # Система сборки (Windows)
-├── test_runner.sh        # Скрипт тестирования
+│   └── test_python_cli.py
+├── pyproject.toml        # Конфигурация Python
+├── requirements.txt      # Зависимости
+├── build_py.bat          # Скрипт сборки (Windows)
+├── run_tests_py.sh       # Скрипт тестирования (Linux/macOS)
+├── run_tests.py          # Скрипт тестирования (Python)
 ├── test_data.txt         # Тестовые данные
+├── test_data.txt.cbc.enc # Пример зашифрованного файла
 └── README.md
 ```
 
