--- a/результаты_M1.md
+++ b/результаты_M1.md
@@ -6,7 +6,7 @@
 | **STR-2**  | ✅ Выполнено | README.md обновлен с инструкциями       |
 | **STR-3**  | ✅ Выполнено | Python: pyproject.toml и requirements.txt |
 | **STR-4**  | ✅ Выполнено | Структура проекта организована логично  |
-| **CLI-1**  | ✅ Выполнено | Утилита вызывается как cryptocore       |
+| **CLI-1**  | ✅ Выполнено | Утилита вызывается через Python модуль |
 | **CLI-2**  | ✅ Выполнено | Поддержка всех требуемых аргументов     |
 | **CLI-3**  | ✅ Выполнено | Ключ принимается в hex формате          |
 | **CLI-4**  | ✅ Выполнено | Валидация всех аргументов               |
@@ -41,18 +41,20 @@ CryptoCore (Python версия) поддерживает:
 
 ```bash
 # Шифрование
-cryptocore --algorithm aes --mode ecb --encrypt --key 000102030405060708090a0b0c0d0e0f --input plaintext.txt --output ciphertext.bin
+python -m pycryptocore.cli --algorithm aes --mode ecb --encrypt --key 000102030405060708090a0b0c0d0e0f --input plaintext.txt --output ciphertext.bin
 
 # Дешифрование
-cryptocore --algorithm aes --mode ecb --decrypt --key 000102030405060708090a0b0c0d0e0f --input ciphertext.bin --output decrypted.txt
+python -m pycryptocore.cli --algorithm aes --mode ecb --decrypt --key 000102030405060708090a0b0c0d0e0f --input ciphertext.bin --output decrypted.txt
 ```
 
 ### Интероперабельность с OpenSSL:
 
 ```bash
 # Шифрование с OpenSSL, дешифрование с CryptoCore
-openssl enc -aes-128-ecb -K 000102030405060708090a0b0c0d0e0f -in plaintext.txt -out ciphertext.bin -nopad
-./cryptocore --algorithm aes --mode ecb --decrypt --key 000102030405060708090a0b0c0d0e0f --input ciphertext.bin --output decrypted.txt
+openssl enc -aes-128-ecb -K 000102030405060708090a0b0c0d0e0f -in plaintext.txt -out ciphertext.bin
+python -m pycryptocore.cli --algorithm aes --mode ecb --decrypt --key 000102030405060708090a0b0c0d0e0f --input ciphertext.bin --output decrypted.txt
 ```
+
+**Примечание:** Для интероперабельности с OpenSSL не используется флаг `-nopad`, так как CryptoCore использует PKCS#7 padding.
 
 Проект готов к использованию и соответствует всем техническим требованиям Sprint 1.
