--- a/результаты.md
+++ b/результаты.md
@@ -51,9 +51,38 @@
 | **TEST-3** | ✅ Выполнено | Интероперабельность OpenSSL→CryptoCore  |
 | **TEST-4** | ✅ Выполнено | Скрипты тестирования предоставлены      |
 
+## Sprint 3 (M3) - CSPRNG и обновления CLI
+
+| Требование | Статус      | Доказательство |
+| ---------- | ----------- | -------------- |
+| **STR-1**  | ✅ Выполнено | Сохранены требования M1–M2; регрессий нет |
+| **STR-2**  | ✅ Выполнено | Новый модуль `pycryptocore/csprng.py` |
+| **STR-3**  | ✅ Выполнено | `README.md`: поведение без `--key`, пример, свойства CSPRNG, NIST STS |
+| **CLI-1**  | ✅ Выполнено | `--key` необязателен при шифровании: `pycryptocore/cli.py` |
+| **CLI-2**  | ✅ Выполнено | При наличии `--key` используется как прежде: `cli.py` |
+| **CLI-3**  | ✅ Выполнено | Генерация ключа 16 байт, печать в stdout, шифрование: `cli.py` |
+| **CLI-4**  | ✅ Выполнено | Для дешифрования `--key` обязателен (если нет `--password`): `cli.py` |
+| **CLI-5**  | ✅ Выполнено | Предупреждение о слабом ключе (stderr): `detect_weak_key` + `cli.py` |
+| **RNG-1**  | ✅ Выполнено | Выделенный модуль CSPRNG |
+| **RNG-2**  | ✅ Выполнено | `generate_random_bytes(num_bytes: int) -> bytes` |
+| **RNG-3**  | ✅ Выполнено | Используется `os.urandom`: `csprng.py` |
+| **RNG-4**  | ✅ Выполнено | Исключено `random`/`rand()` |
+| **RNG-5**  | ✅ Выполнено | Все IV и автоключ через CSPRNG: `crypto_core.py`, `cli.py` |
+| **RNG-6**  | ✅ Выполнено | Обработка ошибок CSPRNG (`CSPRNGError`), общий обработчик в `cli.py` |
+| **KEY-1**  | ✅ Выполнено | Ключ 16 байт (AES‑128) |
+| **KEY-2**  | ✅ Выполнено | Ключ печатается 1 раз в stdout |
+| **KEY-3**  | ✅ Выполнено | Ключ не пишется в файл шифртекста |
+| **IV-1**   | ✅ Выполнено | IV генерируется через CSPRNG |
+| **IV-2**   | ✅ Выполнено | Формат из M2 сохранён (IV prepend/чтение) |
+| **TEST-1** | ✅ Выполнено | Автогенерация ключа → успешный round-trip: `tests/test_python_cli.py` |
+| **TEST-2** | ✅ Выполнено | 1000 уникальных ключей: `tests/test_csprng.py` |
+| **TEST-3** | ✅ Выполнено | Подготовка данных и инструкции NIST STS |
+| **TEST-4** | ✅ Выполнено | Базовая проверка распределения бит |
+| **TEST-5** | ✅ Выполнено | Интероперабельность из M2 сохранена |
+
 ## 🎯 Итоговое заключение
 
-**Все 42 требования из документов M1 и M2 полностью выполнены и протестированы.**
+**Все требования из документов M1–M3 полностью выполнены и протестированы.**
 
 CryptoCore (Python версия) теперь поддерживает:
 
@@ -65,6 +94,8 @@ CryptoCore (Python версия) теперь поддерживает:
 - ✅ **Поддержку паролей** с PBKDF2 и солью
 - ✅ **PKCS#7 padding** для корректной обработки данных
 - ✅ **CLI интерфейс** с полной валидацией аргументов
+- ✅ **CSPRNG на базе `os.urandom`**: все IV и автогенерация ключей при шифровании без `--key`
+- ✅ **Предупреждения о слабых ключах** (stderr) и документацию по NIST STS
 
 ### Реализованные режимы:
 
@@ -140,9 +171,11 @@ project_root/
 │   ├── cli.py            # CLI интерфейс
 │   ├── crypto_core.py    # Криптографические функции
 │   ├── file_io.py        # Файловый ввод/вывод
-│   └── kdf.py            # Key Derivation Function (PBKDF2)
+│   ├── kdf.py            # Key Derivation Function (PBKDF2)
+│   └── csprng.py         # CSPRNG (os.urandom)
 ├── tests/                 # Тесты
-│   └── test_python_cli.py
+│   ├── test_python_cli.py
+│   └── test_csprng.py
 ├── pyproject.toml        # Конфигурация Python
 ├── requirements.txt      # Зависимости
 ├── build_py.bat          # Скрипт сборки (Windows)
@@ -153,4 +186,4 @@ project_root/
 └── README.md
 ```
 
-Проект готов к использованию и соответствует всем техническим требованиям Sprint 1 и Sprint 2.
+Проект готов к использованию и соответствует всем техническим требованиям.
