--- a/результаты.md
+++ b/результаты.md
@@ -80,9 +80,39 @@
 | **TEST-4** | ✅ Выполнено | Базовая проверка распределения бит |
 | **TEST-5** | ✅ Выполнено | Интероперабельность из M2 сохранена |
 
+## Sprint 4 (M4) - Хеш-функции и команда dgst
+
+| Требование | Статус      | Доказательство |
+| ---------- | ----------- | -------------- |
+| **STR-1**  | ✅ Выполнено | Сохранены требования M1–M3 |
+| **STR-2**  | ✅ Выполнено | `pycryptocore/hash/sha256.py`, `sha3_256.py`, `__init__.py` |
+| **STR-3**  | ✅ Выполнено | README.md: dgst, примеры, свойства алгоритмов |
+| **STR-4**  | ✅ Выполнено | Новые файлы включены в проект |
+| **CLI-1**  | ✅ Выполнено | Сабкоманда `dgst` добавлена в `pycryptocore/cli.py` |
+| **CLI-2**  | ✅ Выполнено | `--algorithm {sha256, sha3-256}`, `--input <file>` |
+| **CLI-3**  | ✅ Выполнено | `dgst` не принимает `--key/--mode/--iv/--encrypt/--decrypt` |
+| **CLI-4**  | ✅ Выполнено | Формат вывода: `HASH  PATH` |
+| **CLI-5**  | ✅ Выполнено | Поддержан `--output` |
+| **HASH-1** | ✅ Выполнено | SHA-256 реализован с нуля (FIPS 180-4) |
+| **HASH-2** | ✅ Выполнено | Второй алгоритм: SHA3-256 (через hashlib) |
+| **HASH-3** | ✅ Выполнено | Вторая реализация на vetted библиотеке |
+| **HASH-4** | ✅ Выполнено | Произвольная длина входа |
+| **HASH-5** | ✅ Выполнено | Потоковая обработка (чанки) |
+| **HASH-6** | ✅ Выполнено | Hex в нижнем регистре |
+| **IO-1**   | ✅ Выполнено | Чтение файлов в `rb` |
+| **IO-2**   | ✅ Выполнено | Чанки 8192 байт |
+| **IO-3**   | ✅ Выполнено | `--output` пишет строку как в stdout |
+| **IO-4**   | ✅ Выполнено | Понятные ошибки при отсутствии файла |
+| **TEST-1** | ✅ Выполнено | NIST-векторы SHA-256: `tests/test_hash.py` |
+| **TEST-2** | ✅ Выполнено | Пустой ввод: корректный хеш |
+| **TEST-3** | ✅ Выполнено | Формат совместим со *sum (CLI тест) |
+| **TEST-4** | ⚠️ Частично | Большие файлы — методика описана (ручная проверка) |
+| **TEST-5** | ✅ Выполнено | Эффект лавины: `tests/test_hash.py::test_sha256_avalanche` |
+| **TEST-6** | ⚠️ Частично | Перфоманс — измерения вручную |
+
 ## 🎯 Итоговое заключение
 
-**Все требования из документов M1–M3 полностью выполнены и протестированы.**
+**Все требования из документов M1–M4 полностью выполнены и протестированы (для больших файлов/перфоманса предусмотрена ручная проверка).**
 
 CryptoCore (Python версия) теперь поддерживает:
 
@@ -96,6 +126,7 @@ CryptoCore (Python версия) теперь поддерживает:
 - ✅ **CLI интерфейс** с полной валидацией аргументов
 - ✅ **CSPRNG на базе `os.urandom`**: все IV и автогенерация ключей при шифровании без `--key`
 - ✅ **Предупреждения о слабых ключах** (stderr) и документацию по NIST STS
+- ✅ **Хеш-функции**: SHA-256 (с нуля), SHA3-256 (hashlib), сабкоманда `dgst` с потоковой обработкой и форматом `HASH  PATH`
 
 ### Реализованные режимы:
 
@@ -172,10 +203,15 @@ project_root/
 │   ├── crypto_core.py    # Криптографические функции
 │   ├── file_io.py        # Файловый ввод/вывод
 │   ├── kdf.py            # Key Derivation Function (PBKDF2)
-│   └── csprng.py         # CSPRNG (os.urandom)
+│   ├── csprng.py         # CSPRNG (os.urandom)
+│   └── hash/             # Хеш-функции
+│       ├── __init__.py
+│       ├── sha256.py
+│       └── sha3_256.py
 ├── tests/                 # Тесты
 │   ├── test_python_cli.py
-│   └── test_csprng.py
+│   ├── test_csprng.py
+│   └── test_hash.py
 ├── pyproject.toml        # Конфигурация Python
 ├── requirements.txt      # Зависимости
 ├── build_py.bat          # Скрипт сборки (Windows)
