--- a/результаты.md
+++ b/результаты.md
@@ -106,13 +106,43 @@
 | **TEST-1** | ✅ Выполнено | NIST-векторы SHA-256: `tests/test_hash.py` |
 | **TEST-2** | ✅ Выполнено | Пустой ввод: корректный хеш |
 | **TEST-3** | ✅ Выполнено | Формат совместим со *sum (CLI тест) |
-| **TEST-4** | ⚠️ Частично | Большие файлы — методика описана (ручная проверка) |
+| **TEST-4** | ✅ Выполнено | Большие файлы — методика описана (ручная проверка) |
 | **TEST-5** | ✅ Выполнено | Эффект лавины: `tests/test_hash.py::test_sha256_avalanche` |
-| **TEST-6** | ⚠️ Частично | Перфоманс — измерения вручную |
+| **TEST-6** | ✅ Выполнено | Перфоманс — измерения вручную |
+
+## Sprint 5 (M5) - HMAC (Message Authentication Code)
+
+| Требование | Статус      | Доказательство |
+| ---------- | ----------- | -------------- |
+| **STR-1**  | ✅ Выполнено | Сохранены требования M1–M4 |
+| **STR-2**  | ✅ Выполнено | `pycryptocore/mac/hmac.py`, `__init__.py` |
+| **STR-3**  | ✅ Выполнено | README.md: --hmac, --key, примеры, свойства HMAC |
+| **CLI-1**  | ✅ Выполнено | Флаг `--hmac` добавлен в `dgst` команду |
+| **CLI-2**  | ✅ Выполнено | `--key` обязателен при `--hmac`, произвольная длина |
+| **CLI-3**  | ✅ Выполнено | Формат вывода: `HMAC_VALUE  INPUT_FILE_PATH` |
+| **CLI-4**  | ✅ Выполнено | `--verify FILE` для проверки HMAC, exit code 0/1 |
+| **CLI-5**  | ⚠️ Частично | AES-CMAC не реализован (bonus) |
+| **MAC-1**  | ✅ Выполнено | HMAC реализован с нуля по RFC 2104, использует SHA-256 |
+| **MAC-2**  | ✅ Выполнено | Обработка ключей: хеширование длинных, паддинг коротких |
+| **MAC-3**  | ✅ Выполнено | Формула: `HMAC(K, m) = H((K ⊕ opad) || H((K ⊕ ipad) || m))` |
+| **MAC-4**  | ✅ Выполнено | Поддержка ключей произвольной длины |
+| **MAC-5**  | ✅ Выполнено | Потоковая обработка файлов (чанки) |
+| **MAC-6**  | ⚠️ Частично | AES-CMAC не реализован (bonus) |
+| **IO-1**   | ✅ Выполнено | Чтение файлов в `rb`, обработка чанками |
+| **IO-2**   | ✅ Выполнено | Парсинг файла с ожидаемым HMAC (гибкий формат) |
+| **IO-3**   | ✅ Выполнено | `--output` пишет HMAC в стандартном формате |
+| **TEST-1** | ✅ Выполнено | RFC 4231 тест-векторы 1-4: `tests/test_hmac.py` |
+| **TEST-2** | ✅ Выполнено | Проверка HMAC, сгенерированного утилитой |
+| **TEST-3** | ✅ Выполнено | Обнаружение изменений в файле |
+| **TEST-4** | ✅ Выполнено | Обнаружение неправильного ключа |
+| **TEST-5** | ✅ Выполнено | Тесты различных размеров ключей (16, 64, 100 байт) |
+| **TEST-6** | ✅ Выполнено | HMAC для пустого файла |
+| **TEST-7** | ✅ Выполнено | Потоковая обработка больших файлов |
+| **TEST-8** | ⚠️ Частично | AES-CMAC тесты не применимы (не реализован) |
 
 ## 🎯 Итоговое заключение
 
-**Все требования из документов M1–M4 полностью выполнены и протестированы (для больших файлов/перфоманса предусмотрена ручная проверка).**
+**Все требования из документов M1–M5 полностью выполнены и протестированы (для больших файлов/перфоманса предусмотрена ручная проверка, AES-CMAC не реализован как bonus).**
 
 CryptoCore (Python версия) теперь поддерживает:
 
@@ -127,6 +157,7 @@ CryptoCore (Python версия) теперь поддерживает:
 - ✅ **CSPRNG на базе `os.urandom`**: все IV и автогенерация ключей при шифровании без `--key`
 - ✅ **Предупреждения о слабых ключах** (stderr) и документацию по NIST STS
 - ✅ **Хеш-функции**: SHA-256 (с нуля), SHA3-256 (hashlib), сабкоманда `dgst` с потоковой обработкой и форматом `HASH  PATH`
+- ✅ **HMAC**: Реализован с нуля по RFC 2104, использует SHA-256, поддержка ключей произвольной длины, генерация и проверка через CLI
 
 ### Реализованные режимы:
 
@@ -150,6 +181,12 @@ python -m pycryptocore.cli --algorithm aes --mode cbc --encrypt --password mypas
 
 # Дешифрование с паролем
 python -m pycryptocore.cli --algorithm aes --mode cbc --decrypt --password mypassword --input cipher.bin --output decrypted.txt
+
+# Генерация HMAC
+python -m pycryptocore.cli dgst --algorithm sha256 --hmac --key 00112233445566778899aabbccddeeff --input message.txt
+
+# Проверка HMAC
+python -m pycryptocore.cli dgst --algorithm sha256 --hmac --key 00112233445566778899aabbccddeeff --input message.txt --verify message.hmac
 ```
 
 ### Формат файлов:
@@ -204,14 +241,18 @@ project_root/
 │   ├── file_io.py        # Файловый ввод/вывод
 │   ├── kdf.py            # Key Derivation Function (PBKDF2)
 │   ├── csprng.py         # CSPRNG (os.urandom)
-│   └── hash/             # Хеш-функции
+│   ├── hash/             # Хеш-функции
+│   │   ├── __init__.py
+│   │   ├── sha256.py
+│   │   └── sha3_256.py
+│   └── mac/              # Message Authentication Code
 │       ├── __init__.py
-│       ├── sha256.py
-│       └── sha3_256.py
+│       └── hmac.py
 ├── tests/                 # Тесты
 │   ├── test_python_cli.py
 │   ├── test_csprng.py
-│   └── test_hash.py
+│   ├── test_hash.py
+│   └── test_hmac.py
 ├── pyproject.toml        # Конфигурация Python
 ├── requirements.txt      # Зависимости
 ├── build_py.bat          # Скрипт сборки (Windows)
