--- a/результаты_M5.md
+++ b/результаты_M5.md
@@ -9,13 +9,13 @@
 | **CLI-2**  | ✅     | `--key` обязателен при `--hmac`, произвольная длина ключа |
 | **CLI-3**  | ✅     | Формат вывода: `HMAC_VALUE  INPUT_FILE_PATH` |
 | **CLI-4**  | ✅     | `--verify FILE` для проверки HMAC, exit code 0/1 |
-| **CLI-5**  | ⚠️     | AES-CMAC не реализован (bonus) |
+| **CLI-5**  | ✅     | Флаг `--cmac` добавлен в `dgst` команду |
 | **MAC-1**  | ✅     | HMAC реализован с нуля по RFC 2104, использует SHA-256 |
 | **MAC-2**  | ✅     | Обработка ключей: хеширование длинных, паддинг коротких |
 | **MAC-3**  | ✅     | Формула: `HMAC(K, m) = H((K ⊕ opad) || H((K ⊕ ipad) || m))` |
 | **MAC-4**  | ✅     | Поддержка ключей произвольной длины |
 | **MAC-5**  | ✅     | Потоковая обработка файлов (чанки) |
-| **MAC-6**  | ⚠️     | AES-CMAC не реализован (bonus) |
+| **MAC-6**  | ✅     | AES-CMAC реализован с нуля по NIST SP 800-38B |
 | **IO-1**   | ✅     | Чтение файлов в `rb`, обработка чанками |
 | **IO-2**   | ✅     | Парсинг файла с ожидаемым HMAC (гибкий формат) |
 | **IO-3**   | ✅     | `--output` пишет HMAC в стандартном формате |
@@ -26,23 +26,27 @@
 | **TEST-5** | ✅     | Тесты различных размеров ключей (16, 64, 100 байт) |
 | **TEST-6** | ✅     | HMAC для пустого файла: `test_hmac_empty_file` |
 | **TEST-7** | ✅     | Потоковая обработка больших файлов: `test_hmac_chunk_processing` |
-| **TEST-8** | ⚠️     | AES-CMAC тесты не применимы (не реализован) |
+| **TEST-8** | ✅     | NIST SP 800-38B тест-векторы: `tests/test_cmac.py` |
 
 ## 🎯 Заключение Sprint 5
 
 - Реализован HMAC с нуля по RFC 2104, используя SHA-256 из Sprint 4.
-- Расширена команда `dgst` флагами `--hmac`, `--key`, `--verify` для генерации и проверки HMAC.
-- Поддержаны ключи произвольной длины с правильной обработкой (хеширование/паддинг).
+- Реализован AES-CMAC с нуля по NIST SP 800-38B (bonus-требование).
+- Расширена команда `dgst` флагами `--hmac`, `--cmac`, `--key`, `--verify` для генерации и проверки MAC.
+- Поддержаны ключи произвольной длины для HMAC и 16-байтовые ключи для CMAC.
 - Потоковая обработка файлов для экономии памяти.
-- Все тесты RFC 4231 проходят, проверка целостности и аутентичности работает корректно.
-- README обновлен с полной документацией по HMAC.
+- Все тесты RFC 4231 (HMAC) и NIST SP 800-38B (CMAC) проходят, проверка целостности и аутентичности работает корректно.
+- README обновлен с полной документацией по HMAC и CMAC.
 
 ### Реализованные функции:
 
 1. **HMAC-SHA256** — полная реализация по RFC 2104
-2. **CLI команды:**
+2. **AES-CMAC** — полная реализация по NIST SP 800-38B
+3. **CLI команды:**
    - Генерация HMAC: `dgst --algorithm sha256 --hmac --key <key> --input <file>`
    - Проверка HMAC: `dgst --algorithm sha256 --hmac --key <key> --input <file> --verify <hmac_file>`
+   - Генерация CMAC: `dgst --algorithm sha256 --cmac --key <key> --input <file>`
+   - Проверка CMAC: `dgst --algorithm sha256 --cmac --key <key> --input <file> --verify <cmac_file>`
    - Сохранение в файл: `--output <file>`
 3. **Тесты:**
    - RFC 4231 тест-векторы (1-4)
@@ -63,10 +67,13 @@ python -m pycryptocore.cli dgst --algorithm sha256 --hmac --key 0b0b0b0b0b0b0b0b
 
 ### Результаты тестирования:
 
-Все 15 тестов проходят успешно:
-- ✅ RFC 4231 тест-векторы (4 теста)
-- ✅ Обработка ключей различных размеров (3 теста)
-- ✅ Потоковая обработка (1 тест)
-- ✅ CLI команды (5 тестов)
-- ✅ Обнаружение изменений (2 теста)
+Все тесты проходят успешно:
+- ✅ HMAC: RFC 4231 тест-векторы (4 теста)
+- ✅ HMAC: Обработка ключей различных размеров (3 теста)
+- ✅ HMAC: Потоковая обработка (1 тест)
+- ✅ HMAC: CLI команды (5 тестов)
+- ✅ HMAC: Обнаружение изменений (2 теста)
+- ✅ CMAC: NIST SP 800-38B тест-векторы (1 тест)
+- ✅ CMAC: Базовые тесты (6 тестов)
+- ✅ CMAC: CLI команды (5 тестов)
 
