--- a/результаты.md
+++ b/результаты.md
@@ -193,6 +193,7 @@ CryptoCore (Python версия) теперь поддерживает:
 - ✅ **HMAC**: Реализован с нуля по RFC 2104, использует SHA-256, поддержка ключей произвольной длины, генерация и проверка через CLI
 - ✅ **AES-CMAC**: Реализован с нуля по NIST SP 800-38B, использует AES-128, ключ 16 байт, генерация и проверка через CLI
 - ✅ **GCM**: Реализован с нуля по NIST SP 800-38D, аутентифицированное шифрование с поддержкой AAD, катастрофический отказ при неудачной аутентификации
+- ✅ **KDF** (Sprint 7): PBKDF2-HMAC-SHA256 с нуля, иерархия ключей через HMAC, CLI subcommand `derive` (пароль из строки/файла/env, автогенерация соли, iterations, вывод в файл)
 
 ### Реализованные режимы:
 
