--- a/результаты_M6.md
+++ b/результаты_M6.md
@@ -80,6 +80,7 @@ python -m pycryptocore.cli --algorithm aes --mode gcm --decrypt --key 0011223344
 
 - **Алгоритм**: AES-128 в режиме CTR для шифрования
 - **GHASH**: Реализация с умножением в GF(2^128)
+- **Умножение в GF(2^128)**: реализовано побитовым умножением с редукцией по неприводимому многочлену x^128 + x^7 + x^2 + x + 1 (константа R=0xE1000000000000000000000000000000), проход по битам множителя, условный XOR с накопленным полиномом и сдвиг/редукция при установленном младшем бите
 - **Nonce**: 12 байт (96 бит), генерируется случайно
 - **Tag**: 16 байт (128 бит)
 - **Формат файла**: nonce (12) || ciphertext || tag (16)
