--- a/результаты.md
+++ b/результаты.md
@@ -309,4 +309,25 @@ project_root/
 └── README.md
 ```
 
-Проект готов к использованию и соответствует всем техническим требованиям.
+Проект готов к использованию и соответствует всем техническим требованиям M1–M6.
+
+---
+
+## Sprint 7 (M7) - KDF / derive (PBKDF2 + Key Hierarchy)
+
+Подробности — в `результаты_M7.md`. Вкратце:
+
+- Реализован PBKDF2‑HMAC‑SHA256 с нуля (`pycryptocore/kdf/pbkdf2.py`) и иерархия ключей на HMAC (`kdf/hierarchy.py`).
+- Добавлена CLI‑команда `derive` (пароль из строки/файла/env, соль hex/авто, iterations, длина, вывод raw в файл + hex в stdout).
+- Тесты `tests/test_pbkdf2.py` и `tests/test_cli_derive.py` покрывают RFC 6070‑совместимые векторы, воспроизводимость и контекстное разделение.
+
+---
+
+## Sprint 8 (M8) - Polish & Documentation
+
+Подробности — в `результаты_M8.md`. Вкратце:
+
+- Создан каталог `docs/` с файлами `API.md`, `USERGUIDE.md`, `DEVELOPMENT.md`, описывающими API, сценарии использования и внутреннюю структуру для разработчиков.
+- Укреплён тестовый контур: все модули покрыты pytest‑тестами; добавлен `tests/test_openssl_interop.py` для проверки совместимости с OpenSSL (AES‑128‑ECB).
+- Добавлены практические файлы‑инструкции: `SETUP_UBUNTU_24_04.md` (развёртывание на Ubuntu 24.04) и `COMMANDS_CHEATSHEET.md` (краткая шпаргалка команд).
+- Полный прогон `pytest` (58 тестов) подтверждает успешное выполнение всех требований M1–M8 без регрессий.
