--- a/результаты.md
+++ b/результаты.md
@@ -327,5 +327,6 @@ project_root/
 
 - Создан каталог `docs/` с файлами `API.md`, `USERGUIDE.md`, `DEVELOPMENT.md`, описывающими API, сценарии использования и внутреннюю структуру для разработчиков.
 - Укреплён тестовый контур: все модули покрыты pytest‑тестами; добавлен `tests/test_openssl_interop.py` для проверки совместимости с OpenSSL (AES‑128‑ECB).
-- Добавлены практические файлы‑инструкции: `SETUP_UBUNTU_24_04.md` (развёртывание на Ubuntu 24.04) и `COMMANDS_CHEATSHEET.md` (краткая шпаргалка команд).
+- Добавлены практические файлы‑инструкции: `SETUP_UBUNTU_24_04.md` (развёртывание на Ubuntu 24.04) и `COMMANDS_CHEATSHEET.md` (краткая шпаргалка команд).
+- Созданы файлы качества: `CHANGELOG.md` (история изменений), `CONTRIBUTING.md` (руководство для контрибьюторов), `SECURITY.md` (политика безопасности).
 - Полный прогон `pytest` (58 тестов) подтверждает успешное выполнение всех требований M1–M8 без регрессий.
