--- a/результаты_M8.md
+++ b/результаты_M8.md
@@ -22,7 +22,22 @@
 
 - Репозиторий приведён к «production‑style» виду: добавлена папка `docs/` с отдельными документами для API, пользователей и разработчиков.
 - Тестовый контур усилен: добавлен модуль `tests/test_openssl_interop.py` для проверки интероперабельности CryptoCore ↔ OpenSSL (AES‑128‑ECB).
-- В README и вспомогательных файлах (`SETUP_UBUNTU_24_04.md`, `COMMANDS_CHEATSHEET.md`) описан полный процесс установки, тестирования и использования на чистой Ubuntu 24.04.
+- В README и вспомогательных файлах (`SETUP_UBUNTU_24_04.md`, `COMMANDS_CHEATSHEET.md`) описан полный процесс установки, тестирования и использования на чистой Ubuntu 24.04.
+- Созданы файлы качества (QA-4, QA-5, QA-6):
+  - `CHANGELOG.md` — история изменений по всем спринтам (M1–M8)
+  - `CONTRIBUTING.md` — руководство для контрибьюторов с процессами разработки
+  - `SECURITY.md` — политика безопасности и процесс раскрытия уязвимостей
 - Полный прогон `pytest` подтверждает, что все требования M1–M8 выполнены и регрессий нет.
+
+### 5. Quality Assurance
+
+| Требование | Статус | Доказательство |
+| ---------- | ------ | -------------- |
+| **QA-1**   | ✅     | Код проверен: нет hardcoded ключей/паролей, используется `os.urandom()`, constant-time операции для MAC сравнения |
+| **QA-2**   | ✅     | Python код: нет buffer overflows, integer overflows, memory leaks (Python управляет памятью автоматически) |
+| **QA-3**   | ✅     | Зависимости зафиксированы: `requirements.txt` (pycryptodome==3.20.0), `pyproject.toml` |
+| **QA-4**   | ✅     | Создан `CHANGELOG.md` с историей изменений всех спринтов (M1–M8) |
+| **QA-5**   | ✅     | Создан `CONTRIBUTING.md` с руководством для контрибьюторов, процессами разработки и стандартами кода |
+| **QA-6**   | ✅     | Создан `SECURITY.md` с политикой безопасности, процессом раскрытия уязвимостей и best practices |
 
 
